[package]
name = "orx-imp-vec"
version = "2.15.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "`ImpVec` stands for immutable push vector 👿, it is a data structure which allows appending elements with a shared reference."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-imp-vec/"
keywords = ["vec", "pinned", "bag", "container", "split"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.16.0", default-features = false }
orx-fixed-vec = { git = "https://github.com/orxfun/orx-fixed-vec", branch = "new-concurrent-iter-version", default-features = false }
orx-split-vec = { git = "https://github.com/orxfun/orx-split-vec", branch = "new-concurrent-iter-version", default-features = false }
orx-concurrent-iter = { git = "https://github.com/orxfun/orx-concurrent-iter", branch = "relaxing-send-trait-bound", default-features = false }

[dev-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
orx-parallel = { git = "https://github.com/orxfun/orx-parallel", branch = "relaxing-send-trait-bound", default-features = false }
test-case = "3.3.1"
